[project]
name = "mcp-watermarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0"
]

[project.scripts]
mcp-watermarks = "mcp_watermarks:main"
