[project]
name = "mcp-watermarks"
version = "0.1.0"
description = "A lightweight MCP component for adding text watermarks to pictures"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Liu Hao", email = "liu.hao1443@gmail.com"}
]
license = "Apache-2.0"
dependencies = [
    "fastmcp>=0.1.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0"
]

[project.scripts]
mcp-watermarks = "mcp_watermarks:main"

[project.urls]
"Homepage" = "https://github.com/LiuHao-1443/mcp-watermarks"
"Bug Tracker" = "https://github.com/LiuHao-1443/mcp-watermarks/issues"
